--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "author": "Hans Rio",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "imagekit": "^4.1.3",
+        "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.22",
